--- a/index.html
+++ b/index.html
@@ -1402,6 +1402,7 @@
                 <div class="footer-column">
                     <h3>Contact <span class="toggle-icon"><i class="fas fa-chevron-down"></i></span></h3>
                     <ul class="footer-links">
+                        <li><i class="fas fa-envelope"></i> +15844449666</li>
                         <li><i class="fas fa-envelope"></i> patriciawhiteney@gmail.com</li>
                         <li><i class="fas fa-map-marker-alt"></i> Based Globally</li>
                     </ul>
